--- a/blueprints/script/jlo/ask_yes_no_question.yaml
+++ b/blueprints/script/jlo/ask_yes_no_question.yaml
@@ -1,29 +1,15 @@
 blueprint:
-  name: Ask a Yes/No question
+  name: Ask a Yes//No question
   description: |
     Ask a simple Yes/No question. Supports 50 different ways of confirming or rejecting the question. Supports retries.
   domain: script
   author: JLo
   input:
-    voice_assistant:
-      name: Voice assistant
-      description: The voice assistant that will be used for that conversation.
-      selector:
-        entity:
-          multiple: false
-          filter:
-            - domain: assist_satellite
     question:
       name: Question
       description: The question that will be asked by the voice assistant.
       selector:
         text:
-    preannounce:
-      name: Preannounce
-      description: Play a sound before the question is asked.
-      default: true
-      selector:
-        boolean:
 
     yes_section:
       name: Confirmation ('Yes', 'Of course', ...)
@@ -198,6 +184,24 @@ variables:
     - Let's skip that
     - I'm not comfortable with that
 
+fields:
+  voice_assistant:
+    name: Voice assistant
+    description: The voice assistant that will be used for that conversation.
+    required: true
+    selector:
+      entity:
+        multiple: false
+        filter:
+          - domain: assist_satellite
+  preannounce:
+    name: Preannounce
+    description: Play a sound before the question is asked.
+    required: true
+    default: true
+    selector:
+      boolean:
+
 sequence:
   - variables:
       number_of_retries: !input number_of_retries
@@ -207,8 +211,8 @@ sequence:
           continue_on_error: true
           data:
             question: !input question
-            preannounce: !input preannounce
-            entity_id: !input voice_assistant
+            preannounce: "{{preannounce}}"
+            entity_id: "{{voice_assistant}}"
             answers:
               - id: "yes"
                 sentences: "{{yes_sentences}}"
@@ -227,7 +231,7 @@ sequence:
                     message: !input yes_answer
                     preannounce: false
                   target:
-                    entity_id: !input voice_assistant
+                    entity_id: "{{voice_assistant}}"
             - conditions:
                 - condition: template
                   value_template: "{{response.id == 'no'}}"
@@ -239,7 +243,7 @@ sequence:
                     message: !input no_answer
                     preannounce: false
                   target:
-                    entity_id: !input voice_assistant
+                    entity_id: "{{voice_assistant}}"
           default:
             - sequence: !input other_actions
             - action: assist_satellite.announce
@@ -248,7 +252,7 @@ sequence:
                 message: !input other_answer
                 preannounce: false
               target:
-                entity_id: !input voice_assistant
+                entity_id: "{{voice_assistant}}"
       until:
         - condition: template
           value_template: "{{ (response is defined and response.id in ['yes','no']) or repeat.index > number_of_retries}}"
